# vicon_pose

gps_vicon_cont/: CMakeLists.txt  package.xml
gps_vicon_cont/cfg/: vicon_params.yaml
gps_vicon_cont/launch/: node.launch  px4_config.yaml  px4_pluginlists.yaml  rollingHead.launch  signal_vicon.launch  signal_vicon2.launch
gps_vicon_cont/script/: offb_pos_ctrl.py
gps_vicon_cont/src/offb_pos_ctrl/: offboard_test.cpp
gps_vicon_cont/src/vicon_src/: CFetchViconData.cpp  viconros.cpp
px4_gcs/: CMakeLists.txt  package.xml
px4_gcs/cfg/: drone_0.yaml
px4_gcs/include/px4_gcs/: GCSMessage.h  px4_message_type.h
px4_gcs/launch/: uint_test.launch
px4_gcs/src/: double_drone_circle.cpp  drone_unit.cpp  serial_test.cpp
